[project]
name = "pyhss-cli"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexander Couzens",email = "lynxis@fe80.eu"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "click (>=8.2.1,<9.0.0)"
]

[project.scripts]
pyhss = "pyhss_cli.cli:cli"

[tool.poetry]
packages = [{include = "pyhss_cli", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
